--- a/challenge03/index.html
+++ b/challenge03/index.html
@@ -19,10 +19,7 @@
           tempora culpa labore commodi. Accusamus illum asperiores corporis
           quidem.
         </p>
-
-        <div class="btn">
-          <button>click me</button>
-        </div>
+        <a href="#" class="btn">Click me</a>
       </div>
     </div>
   </body>
